# TS002-clean-data

./: .gitignore  V8_CHANGELOG.md  V9_DESIGN_NOTE.md  cleanup_manifest.md  note.txt  pyproject.toml
baseline/: ts_refactor_common.py
baseline/AEFPlus/: AEFPlus.py
baseline/AIFPlus/: AIFPlus.py
baseline/ModernTCN/: ModernTCN.py
baseline/PatchTST/: PatchTST.py
baseline/TQNet/: TQNet.py
baseline/TimeMixer/: TimeMixer.py
baseline/TimeMixerPP/: TimeMixerPP.py
baseline/iTransformer/: iTransformer.py
configs/: aef.yaml  aef_plus.yaml  aif_lite.yaml  aif_plus.yaml  aif_plus_pqt.yaml  aif_plus_v4.yaml  aif_plus_v5.yaml  aif_plus_v6.yaml  aif_plus_v7.yaml  aif_plus_v8.yaml  aif_plus_v9.yaml  artifact_rules.yaml  counterfactual_eval.yaml  eval_views.yaml  view_specs.yaml
plan/: 000-smoke-run-all.sh  001-build-registry-and-stats.sh  002-detect-review-and-merge-events.sh  003-build-window-scores-views-and-qc.sh  004-run-counterfactual-mainboards.sh  005-run-etth2-support-boundary.sh  006-run-aef-baselines.sh  007-run-aef-plus.sh  008-run-aif-plus.sh  010-run-all.sh  011-run-aif-plus-pqt.sh  011plan.md  012-aif_v4_training_recipe.md  012-run-aif-plus-v4.sh  013-run-aif-plus-v5.sh  014-run-aif-plus-v6.sh  015-run-aif-plus-v7.sh  016-run-aif-plus-v8.sh  017-run-aif-plus-v9.sh  08-run-aif-plus.sh  09-build-final-reports.sh  _common.sh  newplan.md
scripts/: recompute_aif_plus_tables_from_window_errors.py
src/backbones/: __init__.py  factory.py  registry.py
src/cli/: build_011_baseline_diagnosis.py  build_clean_view_qc.py  build_dataset_registry.py  run_aef_plus.py  (+23 more)
(+41 files in other folders)
